--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,39 @@
+appnope==0.1.0
 Cerberus==0.9.2
+decorator==4.0.6
 Eve==0.6.1
 Events==0.2.1
 Flask==0.10.1
 Flask-PyMongo==0.3.1
+gnureadline==6.3.3
+httplib2==0.9.2
+ipykernel==4.2.2
+ipython==4.0.3
+ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.8
+jsonschema==2.5.1
+jupyter-client==4.1.1
+jupyter-core==4.0.6
 MarkupSafe==0.23
+mistune==0.7.1
+nbconvert==4.1.0
+nbformat==4.0.1
+notebook==4.1.0
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.6
+ptyprocess==0.5
+Pygments==2.1
 pymongo==2.9.1
+PySocks==1.5.6
+pytz==2015.7
+pyzmq==15.2.0
+simplegeneric==0.8.1
 simplejson==3.8.1
+six==1.10.0
+terminado==0.6
+tornado==4.3
+traitlets==4.1.0
+twilio==5.2.0
 Werkzeug==0.10.4
