--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.0
+boto==2.39.0
 Cerberus==0.9.2
 decorator==4.0.6
 Eve==0.6.1
@@ -29,10 +30,12 @@ pymongo==2.9.1
 PySocks==1.5.6
 pytz==2015.7
 pyzmq==15.2.0
+requests==2.9.1
 simplegeneric==0.8.1
 simplejson==3.8.1
 six==1.10.0
 terminado==0.6
+tinys3==0.1.11
 tornado==4.3
 traitlets==4.1.0
 twilio==5.2.0
